[package]
name = "aspect-ratio"
version = "0.0.1"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
publish = true
description = "Scale a 2D rect to fit or cover one or more bounds, optionally preserving aspect-ratio"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/aspect-ratio"
homepage = "https://github.com/romnn/aspect-ratio"
repository = "https://github.com/romnn/aspect-ratio"
categories = [
  "mathematics",
  "gui",
  "graphics",
  "multimedia::images",
  "rendering",
]
keywords = [
  "aspect-ratio",
  "images",
  "graphics",
  "scaling",
]
exclude = [
  ".github",
  ".typos.toml",
  ".ignore",
  ".bumpversion.toml",
  "tests/",
  "taskfile.yaml",
]

[features]
default = []

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
strum = { version = "0", features = ["derive"] }
safe-arithmetic = "0"

[dev-dependencies]
color-eyre = "0"
similar-asserts = "1"
